msa-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
  namespace: test
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/load-balancer-name: msa-alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:922805825674:certificate/9c33cb1d-573d-4aee-ae17-b0951b9291fd
spec:
  ingressClassName: alb
  rules:
    - host: www.tissue.cloud
      http:
        paths:
          - path: /auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /report
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 80
          - path: /analyze
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 80
          - path: /youtube
            pathType: ImplementationSpecific
            backend:
              service:
                name: youtube-service
                port:
                  number: 80
          - path: /search
            pathType: ImplementationSpecific
            backend:
              service:
                name: youtube-service
                port:
                  number: 80
          - path: /chatbot
            pathType: ImplementationSpecific
            backend:
              service:
                name: chatbot-service
                port:
                  number: 80
